--- a/themes/re-terminal/layouts/_default/index.html
+++ b/themes/re-terminal/layouts/_default/index.html
@@ -12,7 +12,7 @@
     {{ if .IsHome }}
       {{ $PageContext = .Site }}
     {{ end }}
-    {{ $paginator := .Paginate (where $PageContext.RegularPages "Type" $contentTypeName) }}
+    {{ $paginator := .Paginate (where (where $PageContext.RegularPages "Type" $contentTypeName) ".Params.draft" "!=" true)}}
 
     {{ range $paginator.Pages }}
       <article class="post on-list">
